--- a/ProjectDadotAngularAPI/Web.config
+++ b/ProjectDadotAngularAPI/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ProjectDadotAngularAPI-20171019011834.mdf;Initial Catalog=aspnet-ProjectDadotAngularAPI-20171019011834;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="datotEntities" connectionString="metadata=res://*/Models.tblDatotModel.csdl|res://*/Models.tblDatotModel.ssdl|res://*/Models.tblDatotModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4LVMPLA;initial catalog=datot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="datotEntities" connectionString="metadata=res://*/Models.tblDatotModel.csdl|res://*/Models.tblDatotModel.ssdl|res://*/Models.tblDatotModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4LVMPLA;initial catalog=datot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="datotEntities1" connectionString="metadata=res://*/Models.entityDatotDB.csdl|res://*/Models.entityDatotDB.ssdl|res://*/Models.entityDatotDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=desktop-4lvmpla;initial catalog=datot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
